# SPL_3

./: README.md
SPL_REFRENCE/Systems-Programming-Network-Server-Client/network-communication-spl191-main/Client/: makefile
SPL_REFRENCE/Systems-Programming-Network-Server-Client/network-communication-spl191-main/Client/include/: BGSclient.h  connectionHandler.h
SPL_REFRENCE/Systems-Programming-Network-Server-Client/network-communication-spl191-main/Client/src/: BGSclient.cpp  connectionHandler.cpp
SPL_REFRENCE/Systems-Programming-Network-Server-Client/network-communication-spl191-main/Server/: pom.xml
spl-net/: readme.txt
spl-net/Client/: CMakeLists.txt  ConnectionHandler.cpp  ConnectionHandler.h  EchoClient.cpp  EchoClient.h  makefile
spl-net/Client/include/: ConnectionHandler.h  EchoClient.h  Keyboard.h  ServerListener.h
spl-net/Client/src/: ConnectionHandler.cpp  EchoClient.cpp  Keyboard.cpp  ServerListener.cpp
spl-net/Server/src/main/java/bgu/spl/net/api/: BackMessage.java  BidiMessagingProtocol.java  ClientProtocol.java  Connections.java  ConnectionsImplementation.java  DataBaseQueries.java  DataBaseServer.java  EncDec.java  MessageEncoderDecoder.java  MessagingProtocol.java  User.java  messages.java
spl-net/Server/src/main/java/bgu/spl/net/api/MessagePackage/: BackMessage.java  (+3 more)
spl-net/Server/src/main/java/bgu/spl/net/impl/: ThreadPerClient.java
spl-net/Server/src/main/java/bgu/spl/net/srv/: ActorThreadPool.java  BaseServer.java  BlockingConnectionHandler.java  ConnectionHandler.java  NonBlockingConnectionHandler.java  Reactor.java  Server.java
(+35 files in other folders)
